Etapa 3 — Deuda técnica preexistente que se menciona en cada oleada pero nunca se resuelve